[package]
name = "pallet-hexalem"
description = "Hexalem game pallet"

authors.workspace    = true
edition.workspace    = true
homepage.workspace   = true
repository.workspace = true
version.workspace    = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# General (wasm)
log = { workspace = true }
hex = { workspace = true, features = ["alloc"] }

# Substrate (wasm)
frame-support      = { workspace = true }
frame-system       = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive", "max-encoded-len" ] }
scale-info         = { workspace = true, features = [ "derive" ] }

[dev-dependencies]
sp-core                                    = { workspace = true }
sp-io                                      = { workspace = true }
sp-runtime                                 = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
	"frame-support/std",
	"frame-system/std",
]
