[workspace]
resolver = "2"
# Keep in the lexicographic order!
# Remove a member if it's used as a dependency in the workspace.
members = [
    "contracts",
]

[workspace.package]
homepage = "https://wiki.gear-tech.io/docs/examples/prerequisites"
documentation = "https://dapps.gear.rs"
authors = ["Gear Foundation <hello@gear.foundation>"]
version = "1.0.1"
license = "MIT"
edition = "2021"
publish = false

[workspace.dependencies]
five-in-a-row-io.path = "contracts/io"
# Gear

gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.0.1" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", tag = "v1.0.1" }
gmeta = { git = "https://github.com/gear-tech/gear", tag = "v1.0.1" }
gclient = { git = "https://github.com/gear-tech/gear", tag = "v1.0.1" }
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.0.1" }
gear-core = { git = "https://github.com/gear-tech/gear", tag = "v1.0.1" }

# External

primitive-types = { version = "0.12", default-features = false }
sp-core = { version = "22", default-features = false, features = ["full_crypto", "sp-externalities"] }
sp-core-hashing = { version = "10", default-features = false }
tokio = "1"
blake2-rfc = "0.2"
hex-literal = "0.4"
hex = { version = "0.4", default-features = false }
async-trait = "0.1"
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"
indexmap = { version = "2", default-features = false }
ahash = { version = "0.8", default-features = false, features = ["no-rng"] }
schnorrkel = { version = "0.10", default-features = false, features = ["u64_backend"] }
syn = { version = "2", default-features = false }
quote = "1"
clap = { version = "4", default-features = false, features = ["std"] }
enum-iterator = "1"
xshell = "0.2"
anyhow = "1"
sha2 = "0.10"
num-traits = { version = "0.2", default-features = false }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
