[package]
name = "node_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { git = "https://github.com/justinfrevert/risc0" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
subxt = { version = "0.31.0" }
subxt-signer = { version = "0.31.0", features = ["subxt"] }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
clap = { version = "4.2.7", features = ["derive", "env"] }
serde_json = "1.0.96"
hex = "0.4.3"
futures-util = "0.3.28"
futures = "0.3"
bincode = "1.3.3"
