[package]
name = "prover-host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { git = "https://github.com/justinfrevert/risc0" }
serde = "1.0"
tokio = { version = "1", features = ["full"] }
subxt = { version = "0.25.0" }
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
clap = { version = "4.2.7", features = ["derive", "env"] }
serde_json = "1.0.96"
hex = "0.4.3"
futures-util = "0.3.28"
futures = "0.3"
bincode = "1.3.3"
