[package]
name = "redlight"
version = "0.0.1"
description = "Melodot light client"
authors = ["DKLee <xiuerdwy@gmail.com>"]
repository = "https://github.com/ZeroDAO/redot"
keywords = ["substrate"]
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "melodot-light"
path = "src/main.rs"

[dependencies]
melo-das-db = { git = "https://github.com/ZeroDAO/melodot", branch = "polkadot-v1.0.0", features = ["sqlite"] }

redoxt = { path = "../redoxt" }
rc-validator-network = { path = "../crates/rc-validator-network" }
rc-validator = { path = "../crates/rc-validator" }

subxt = { version = "0.31.0"}
subxt-signer = { version = "0.31.0", features = ["subxt"] }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v1.0.0" }
codec = { package = "parity-scale-codec", version = "3.2.2", features = ["derive"] }

clap = { version = "4.0.9", features = ["derive","env"] }
anyhow = "1.0.66"
tracing = "0.1.37"
tokio-stream = { version = "0.1" }
tracing-subscriber = { version = "0.2.25", features = ["json"] }
tokio = { version = "1.21.2", features = ["macros", "parking_lot", "rt-multi-thread", "sync", "time"] }
jsonrpsee = { version = "0.16.2", features = ["full"] }
futures = "0.3.21"
log = "0.4"
ureq = { version = "2.7", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.42" }

[features]