[package]
name = "hello_ink"
version = "0.1.0"
authors = ["jasl <jasl9187@hotmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0-rc", default-features = false }

scale-codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"], optional = true }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale-codec/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
